# PolybenchOMP

./: CMakeLists.txt  README.md
OmpCPU/: CMakeLists.txt
OmpCPU/2DCONV/: 2DConvolution.c  CMakeLists.txt
OmpCPU/2MM/: 2mm.c  CMakeLists.txt
OmpCPU/3DCONV/: 3DConvolution.c  CMakeLists.txt
OmpCPU/3MM/: 3mm.c  CMakeLists.txt
OmpCPU/ATAX/: CMakeLists.txt  atax.c
OmpCPU/BICG/: CMakeLists.txt  bicg.c
OmpCPU/CORR/: CMakeLists.txt  correlation.c
OmpCPU/COVAR/: CMakeLists.txt  covariance.c
OmpCPU/FDTD-2D/: CMakeLists.txt  fdtd2d.c
OmpCPU/GEMM/: CMakeLists.txt  gemm.c
OmpCPU/GESUMMV/: CMakeLists.txt  gesummv.c
OmpCPU/GRAMSCHM/: CMakeLists.txt  gramschmidt.c
OmpCPU/MVT/: CMakeLists.txt  mvt.c
OmpCPU/SYR2K/: CMakeLists.txt  syr2k.c
OmpCPU/SYRK/: CMakeLists.txt  syrk.c
OmpGPU/: CMakeLists.txt
OmpGPU/2DCONV/: 2DConvolution.c  CMakeLists.txt
OmpGPU/2MM/: 2mm.c  CMakeLists.txt
OmpGPU/3DCONV/: 3DConvolution.c  CMakeLists.txt
OmpGPU/3MM/: 3mm.c  CMakeLists.txt
OmpGPU/ATAX/: CMakeLists.txt  atax.c
OmpGPU/BICG/: CMakeLists.txt  bicg.c
OmpGPU/CORR/: CMakeLists.txt  correlation.c
OmpGPU/COVAR/: CMakeLists.txt  covariance.c
OmpGPU/FDTD-2D/: CMakeLists.txt  fdtd2d.c
OmpGPU/GEMM/: CMakeLists.txt  gemm.c
OmpGPU/GESUMMV/: CMakeLists.txt  gesummv.c
OmpGPU/GRAMSCHM/: CMakeLists.txt  gramschmidt.c
OmpGPU/MVT/: CMakeLists.txt  mvt.c
OmpGPU/SYR2K/: CMakeLists.txt  syr2k.c
OmpGPU/SYRK/: CMakeLists.txt  syrk.c
common/: polybenchUtilFuncts.h
