if (OPENMP_FOUND)
	if (RUN_OFFLOAD_GPU) 
		message("Building for GPU offloading. ")
		set(OMP_TARGETS "nvptx64")
		# Note that the compute compatibility is set to sm_61 for 1080ti
		set(OMP_OFFLOAD_FLAGS "-fopenmp-targets=${OMP_TARGETS} --target=x86_64-unknown-linux-gnu -Xopenmp-target -march=sm_61")
	else()
		message("Building for CPU offloading. ")
		set(OMP_TARGETS "x86_64-unknown-linux-gnu")
		set(OMP_OFFLOAD_FLAGS "-fopenmp-targets=${OMP_TARGETS} --target=x86_64-unknown-linux-gnu")
	endif()

	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OMP_OFFLOAD_FLAGS}")
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OMP_OFFLOAD_FLAGS}")
endif()

add_custom_target(OMPGPU)

add_subdirectory(2DCONV)
add_subdirectory(2MM)
add_subdirectory(3DCONV)
add_subdirectory(3MM)
add_subdirectory(ATAX)
add_subdirectory(BICG)
add_subdirectory(CORR)
add_subdirectory(COVAR)
add_subdirectory(FDTD-2D)
add_subdirectory(GEMM)
add_subdirectory(GESUMMV)
add_subdirectory(GRAMSCHM)
add_subdirectory(MVT)
add_subdirectory(SYR2K)
#add_subdirectory(SYRK)
